# parenttext-pipeline

./: .git-blame-ignore-revs  .gitignore  README.md  archive_test.py  config.py  extract_keywords.py  importer.py  package-lock.json  package.json  pipeline.py  pipelines.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-ckan-job.yml  docker-ckan-export.yml  test.yml
docs/: archive.md  automated_ckan_export.md  canto.md  ckan_tools.md  configuration.md  deployment.md  hierarchy.md  operations.md  rapidpro-import.md  rapidpro_api_tools.md  sources.md  steps.md  transcode.md
edits/: select_phrases.json  special_words.json
models/: parenttext_models.py
previous_examples/: parenttext_v2_deployment.ps1
src/parenttext/: auth_tool.py  canto.py  ckan_tools.py  firebase_tools.py  media_ops.py  placeholder_gen.py  rapidpro_api_tools.py  rearrange_folders.py  referenced_assets.py  sheet_language_conversion.py  transcode.py  validate_assets.py
src/parenttext_pipeline/: __init__.py  archive.py  cli.py  common.py  compile_flows.py  compile_sources.py  config_converter.py  configs.py  extract_keywords.py  google_csv_convertor.py  importer.py  pipelines.py  pot_output.py  pull_data.py  safeguarding_words.json  sis_mod_v2.xlsx  steps.py  zul_mod_v2.xlsx
src/parenttext_pipeline/models/: parenttext_models.py
src/parenttext_pipeline/previous_examples/: srh_jamaica.py
src/parenttext_pipline/: pipelines.py
src/parenttext_pipline/previous_examples/: parenttext_v2_deployment.ps1  pipeline.py
tests/: test_extract_keywords.py  test_set_expiration.py  test_split_rapidpro_json.py
tests/resources/: sg_expected.json  sg_hau.xlsx  sg_zul.xlsx  zul_mod.xlsx  zul_mod_expected.json
tools/: Dockerfile.rapidpro_ckan_pipeline
tools/ckan_export/: Dockerfile  README.md  entrypoint.sh
tools/ckan_export/bootstrap_tofu/: main.tf
tools/ckan_export/tofu/: main.tf  variables.tf
utils/uni-migration/: C_modules_all_ages.sed  migrate.sh  uni-migration.sed
